--- a/TinkoffCalculator.xcodeproj/xcshareddata/xcschemes/TinkoffCalculator.xcscheme
+++ b/TinkoffCalculator.xcodeproj/xcshareddata/xcschemes/TinkoffCalculator.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5A8F3BEA2B61899E00220964"
+               BuildableName = "TinkoffCalculatorUITests.xctest"
+               BlueprintName = "TinkoffCalculatorUITests"
+               ReferencedContainer = "container:TinkoffCalculator.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
